# simulstream

./: .gitignore  .gitlab-ci.yml  .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: ci.yaml
config/: fama_hf_sliding_window_retranslation.yaml  http_proxy_processor.yaml  http_server_example.yaml  server.yaml
docs/source/: conf.py  modules.rst  usage.rst
examples/http_docker/: Dockerfile  README.md
simulstream/: __init__.py
simulstream/client/: wav_reader_client.py
simulstream/metrics/: score_quality.py
simulstream/metrics/scorers/latency/: mwersegmenter.py
simulstream/metrics/scorers/quality/: mwersegmenter.py
simulstream/server/: message_processor.py  websocket_server.py
simulstream/server/speech_processors/: __init__.py  base.py  base_streamatt.py  sliding_window_retranslation.py  vad_canary_sliding_window_retranslation.py  vad_hf_sliding_window_retranslation.py  vad_parent.py  vad_seamless_sliding_window_retranslation.py
simulstream/server/speech_processors/remote/: http_proxy_speech_processor.py  http_speech_processor_server.py
uts/metrics/: test_stream_laal.py  test_tokenize_no_inplace.py
uts/speech_processors/: test_streamatt.py
webdemo/: index.html  processor.js
